# Rusterizer

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs
src/: camera.rs  drawer.rs  lib.rs  loader.rs  scene.rs  smiley.rs  teapot.stl  timer.rs  transforms.rs  tri2D.rs  tri3D.rs  universe.rs  vec2D.rs  vec3D.rs
www/: LICENSE-APACHE  LICENSE-MIT  index.html  index.js  package.json
