[package]
name = "Rustcaster"
version = "1.0.0"
authors = ["Timothee Denizou <denizoutimothee@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"

console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  "console",
  'CanvasRenderingContext2d',
  'Node',
  'Window',
]

[profile.release]
opt-level = 3
lto = true
